# credit-card-churn-clf

./: Makefile  README.md  pyproject.toml
credit_card_churn_clf/: utils.py
credit_card_churn_clf/data/: data_funcs.py
credit_card_churn_clf/models/: feature_engineering.py  modeling_funcs.py
credit_card_churn_clf/scripts/: predict_test_set.py  read_and_split.py  train_models.py
data/predictions/: predictions.pkl
data/splits/: credit_card_churn_train_test.pkl
models/: DecisionTreeClassifier.pkl  GradientBoostingClassifier.pkl  LogisticRegression.pkl  RandomForestClassifier.pkl
notebooks/: 1.0-data-exploration.ipynb  2.0-modeling.ipynb  3.0-model-analysis.ipynb  altair-data-18fac46372752bcc9ddbcfce67cd5882.json  altair-data-1da24a75e27713e583f18e9a232222d6.json  altair-data-3247c800fd3356ad7ebd095589e9ac22.json  altair-data-395d91811ee9015135e6060fce71d37d.json  altair-data-4f4d6b982b0616a8fce5f6db5ede466c.json  altair-data-708c68efc851e24cecc27adae0bfea2a.json  altair-data-854d5b467c5c62d1a06b092142a262ac.json  altair-data-b024f87b26bb3660b01152cbd5f75c1f.json  altair-data-b2ebfcf3e79509efa9778ded10f1be4e.json  altair-data-b38d68f9102006b961365d42f2ab38b2.json  altair-data-b51c64fee1a76a1b687871a5b1500c69.json  altair-data-bcdc3d2e41bbb8bd8ea98c84c7e736f9.json  altair-data-c5f5aa3c1b5287563d53179533f0c507.json  altair-data-d8a6e47f6e00121366e463a17576eba9.json  altair-data-f950ae3b2b59a0827faf26dd97a40a74.json
notebooks/.ipynb_checkpoints/: 1.0-data-exploration-checkpoint.ipynb
tests/: test_credit_card_churn_clf.py
