[tool.poetry]
name = "credit-card-churn-clf"
version = "0.1.0"
description = ""
authors = ["Silas Genário <sg.lopes26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
pandas = "^1.4.3"
altair = "^4.2.0"
jupyterlab = "^3.4.5"
sklearn = "^0.0"
numpy = "^1.23.1"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
